# continuable

./: annotated.html  changelog.html  classcti_1_1continuable__base.html  classcti_1_1exceptional__result.html  classcti_1_1promise__base.html  classcti_1_1promisify.html  classcti_1_1result.html  classcti_1_1work.html  configuration.html  deprecated.html  files.html  group___base.html  group___connections.html  group___primitives.html  group___promisify.html  group___result.html  group___testing.html  group___transforms.html  group___traversal.html  group___types.html  index.html  installation.html  modules.html  namespacecti.html  namespacecti_1_1transforms.html  namespaces.html  pages.html  searchdata.js  structcti_1_1empty__result.html  structcti_1_1exception__arg__t.html  structcti_1_1is__ready__arg__t.html  structcti_1_1query__arg__t.html  tutorial-awaiting-continuables.html  tutorial-chaining-continuables.html  tutorial-connecting-continuables.html  tutorial-creating-continuables.html  tutorial-promisify-continuables.html  tutorial-transforming-continuables.html  tutorial.html
examples/example-asio/: CMakeLists.txt  asio-async-result.hpp  example-asio-async-result.cpp
